# sblim-sfcb

./: .cvsignore  .gitignore  10_interop.mof  20_indication.mof  20_indication.mof.pre.in  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.sfcb-shrink  args.c  array.c  array.h  authorizationEnum.c  authorizationLexer.l  authorizationParser.y  authorizationProvider.c  authorizationUtil.c  authorizationUtil.h  autoconfiscate.sh  avltree.c  avltree.h  brokerEnc.c  brokerOs.c  brokerUpc.c  cimAccountPassthrough.mof  cimAccountPassthroughProvider.c  cimXmlGen.c  cimXmlGen.h  cimXmlOps.y  cimXmlParser.c  cimXmlParser.h  cimXmlRequest.c  cimXmlRequest.h  cimcClientSfcbLocal.c  cimcClientSfcbLocal.h  cimslp.c  cimslp.h  cimslpCMPI.c  (+135 more)
doc/: sfcb.html
extra/: README  sfcb-indications_profile_1.1_for_1.3.7.patch  sfcb-proc-nametags.patch  static_compilation_uclibc_HOWTO
extra/static_compilation_uclibc_files/: sfcb-1.3.7-minfootprint.patch  ucregistration_example.tar
jdbc/: TestClass.java
jdbc/htmlviewer/: HFrame.java
man/: .cvsignore  genSslCert.1  genSslCert.1.pre.in  getSchema.1  getSchema.1.pre.in  sfcbd.1  sfcbd.1.pre.in  sfcbmof.1  sfcbrepos.1  sfcbrepos.1.pre.in  sfcbstage.1  sfcbstage.1.pre.in  sfcbunstage.1  sfcbunstage.1.pre.in  wbemcat.1  wbemcat.1.pre.in  wbemcatX.1.pre.in  xmltest.1
pam/: sfcb
regressionTests/: RegressionTesting.html  broker.sh  build.sh  clean.sh  getSblimBase.sh  reset.sh  setEnv  sfcb.cfg  test.sh  wbemcli.ind
regressionTests/BigOutput/: Makefile  cmpiReefProvider.c  cmpiReefProvider.h
regressionTests/BigOutput/schema/: bigOutput.mof  bigOutput.reg
regressionTests/BigOutput/tests/: BigInstEnumeration.OK  BigInstEnumeration.sh
regressionTests/DataTypes/: Makefile  dataTypes.c  env
regressionTests/DataTypes/schema/: TST_DataTypes.mof  TST_DataTypes.reg
regressionTests/DataTypes/tests/: DeleteInst1.OK  DeleteInst1.sh  DeleteInst2.OK  DeleteInst2.sh  DeleteInst3.OK  DeleteInst3.sh  Enumerate.OK  Enumerate.sh  EnumerateNames1.OK  EnumerateNames1.sh  EnumerateNames2.OK  EnumerateNames2.sh  EnumerateNames3.OK  EnumerateNames3.sh
regressionTests/FilesAndDirectories/: CWS_Directory.c  CWS_DirectoryContainsFile.c  CWS_FileUtils.c  CWS_FileUtils.h  CWS_PlainFile.c  cwssimdata.c  cwstest.c  cwsutil.c  cwsutil.h  makefile
regressionTests/FilesAndDirectories/schema/: CWS_FilesAndDirs.mof  CWS_FilesAndDirs.reg
regressionTests/FilesAndDirectories/tests/: AssociatorDirNames1.OK  AssociatorDirNames1.sh  DeleteDirInstance1.OK  DeleteDirInstance1.sh  EnumerateDir1.OK  EnumerateDir1.sh  EnumerateDirNames1.OK  EnumerateDirNames1.sh  GetInstance1.OK  GetInstance1.sh  PlainFileMethod.sh  PlainFileMethod1.OK  ReferenceDirNames1.OK  ReferenceDirNames1.sh
regressionTests/LifeCycleIndications/: Makefile  createInstIndTestProvider.c  env  rules
regressionTests/LifeCycleIndications/schema/: indications.mof  indications.reg
regressionTests/LifeCycleIndications/tests/: CreateDeleteSeq01.sh  CreateFilter01.xml  CreateFilter02.xml  CreateHandler01.OK  CreateHandler01.xml  CreateSubscription01.OK  CreateSubscription01.xml  DeleteFilter01.xml  DeleteFilter02.xml  DeleteHandler01.OK  DeleteHandler01.xml
regressionTests/ProcessIndications/: Makefile  env  indTestProvider.c
regressionTests/ProcessIndications/schema/: indications.mof  indications.reg
regressionTests/ProcessIndications/tests/: CreateFilter01.OK  CreateFilter01.xml  CreateSubscription02.xml  DeleteFilter01.OK  DeleteSubscription01.OK  DeleteSubscription01.xml  DeleteSubscription02.xml
regressionTests/sblim/: Linux_Base.reg  cmpi-base-setting  dummy.mof  getSblimBase.sh  ind-helper-makefile  makefile
regressionTests/sblim/tests/: testsuite.sh
regressionTests/schema/: baseProvider.reg  interop.mof
regressionTests/scripts/: catdiff  sfcbdiff  wbemcat
sfcUtil/: utilft.h
test/: Makefile.am  README  enumerateclasses.FIRSTTIME.OK  enumerateinstances.Linux_OperatingSystem.xml  running.sh  stageschema.sh
test/ABT/: ABTScript  MonitorABT  sfcb.config
test/TestProviders/: cmpiTestAssociationProvider.c  cmpiTestExecQueryProvider.c  cmpiTestIndicationProvider.c  cmpiTestInstanceProvider.c  cmpiTestMethodProvider.c  cmpiTestMiscProvider.c
test/TestProviders/tests/: AassociatorNames2.lines  AassociatorNames2.xml  AassociatorNames3.lines  AassociatorNames3.xml  Aassociators.xml  Aassociators2.xml  AenumerateInstanceNames.xml  AenumerateInstanceNames1.xml  AreferenceNames.lines  AreferenceNames2.xml  Areferences2.lines  Areferences3.lines  Areferences3.xml  (+92 more)
test/commands/: Makefile.am  classSchemas  cmdusage.sh  sfcbdump.sh
test/finaltest/: Makefile.am  finalcheck.sh
test/localtests/: Makefile.am  show.c  show.h  test_an.c  test_as.c  test_ci.c  test_ec.c  test_ecn.c  test_ei.c  test_ein.c  test_enumNS.c  test_gc.c  test_gi.c
test/pywbem/: Makefile.am  check_pywbem.py  ecn_interop.py
test/schema/: TestAssociationProvider.mof  TestAssociationProvider.reg  Test_Instance.reg  Test_LargeVolume.mof  Test_Method.mof  Test_Misc.reg  Test_Query.mof
test/slptest/: Makefile.am  slpTest.sh  slpTests.sh
test/unittest/: EmbeddedTests.c  Makefile.am  genericlist.c  newCMPIInstance.c  newDateTime.c  xmlUnescape.c
test/wbemcli/: Makefile.am  check_errors.pl
test/xmltest/: AassociatorNames.lines  AassociatorNames.xml  AassociatorNames1.lines  AassociatorNames1.xml  Aassociators.lines  Aassociators1.lines  Aassociators1.xml  Aassociators2.lines  Aassociators3.xml  AreferenceNames.xml  AreferenceNames1.lines  AreferenceNames1.xml  AreferenceNames2.lines  AreferenceNames3.lines  AreferenceNames3.xml  Areferences.lines  Areferences.xml  Areferences1.lines  Areferences1.xml  Areferences2.xml  CHS_AIN_IS.lines  CHS_AI_IS.lines  CHS_RIN_IS.lines  CHS_RIN_IS.xml  CHS_RI_IS.lines  CreateClassSegfault1.lines  CreateClassSegfault1.xml  CreateClassSegfault2.lines  CreateClassSegfault2.xml  ECTP_AIN_IS.lines  ECTP_AIN_IS.xml  ECTP_AIN_RC_IS.lines  ECTP_AIN_RC_IS.xml  ECTP_AIN_bogus.lines  ECTP_AIN_bogus.xml  ECTP_AI_IS.lines  ECTP_AI_IS.xml  ECTP_RIN_RC_IS.lines  ECTP_RIN_RC_IS.xml  ECTP_RI_IS.lines  (+234 more)
(+19 files in other folders)
